fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@import "../../../MsfsAvionicsCommon/definitions";

@font-face {
  font-family: "Ecam";
  //noinspection CssUnknownTarget
  src: url("/Fonts/fbw-a380x/ECAMFontRegular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

$display-mfd-dark-grey: #3c3c3c;

.mfd-main {
  position: absolute;
  width: 768px;
  height: 1024px; /* 1:1.33 W:H  */
  background: $display-background;
  /* background: $display-background; */
  font-family: "Ecam", monospace !important;
  display: flex;
  flex-direction: column;
}

.MFDLabel {
  font-size: 20px;
  color: $display-white;
  font-family: "Ecam", monospace;
}

.MFDLabel.green {
  color: $display-green;
}

.MFDLabel.bigger {
  font-size: 24px;
}

.MFDLabel.biggest {
  font-size: 28px;
}

.MFDUnitLabel {
  color: $display-dark-blue;
  font-size: 20px;
}

.MFDGreenValue {
  color: $display-green;
  font-size: 25px;
}

.MFDGreenValue.smaller {
  font-size: 20px;
}

.MFDGreenValue.bigger {
  font-size: 30px;
}

.MFDCyanValue {
  color: $display-cyan;
  font-size: 25px;
}

.MFDButton {
  font-size: 22px;
  background-color: $display-mfd-dark-grey;
  color: $display-white;
  font-family: "Ecam", monospace;
  text-align: center;
  border: 2px outset $display-light-grey;
  padding: 9px 12px 5px 12px;
  display: flex;
  justify-content: center;
}

.MFDButton.opened {
  background-color: $display-dark-grey;
  border: 2px inset $display-light-grey;
}

.MFDButton:hover {
  border-color: $display-cyan;
}

.MFDButton.disabled {
  color: grey;
}

.MFDButton.disabled:hover {
  border-color: $display-light-grey;
}

.MFDIconButton {
  display: flex;
  flex-direction: row;
  background-color: $display-mfd-dark-grey;
  color: $display-white;
  border: 2px outset $display-light-grey;
  justify-content: center;
  align-items: center;
}

.MFDIconButton:hover {
  border: 2px outset $display-cyan;
}

.MFDDropdownContainer {
  position: relative;
}

.MFDDropdownOuter {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: $display-mfd-dark-grey;
  border: 2px outset $display-light-grey;
}

.MFDDropdownOuter:hover {
  border-color: $display-cyan;
}

.MFDDropdownInner {
  background-color: #040405;
  display: flex;
  flex: 1;
  justify-content: center;
}

.MFDDropdownLabel {
  font-size: 26px;
  color: $display-cyan;
  font-family: "Ecam", monospace;
  margin: 4px 10px 4px 10px;
  display: block;
}

.MFDDropdownLabel.opened {
  background-color: $display-cyan;
  color: $display-background;
}

.MFDDropdownMenu::-webkit-scrollbar {
  width: 20px;
}

.MFDDropdownMenu::-webkit-scrollbar-track {
  background: $display-mfd-dark-grey;
}

.MFDDropdownMenu::-webkit-scrollbar-thumb {
  background: $display-light-grey;
}

.MFDDropdownMenu {
  background-color: $display-mfd-dark-grey;
  min-width: 100%;
  position: absolute;
  z-index: 10;
  overflow: auto;
  max-height: 275px;
  display: none;
  border: 2px outset $display-light-grey;
}

.MFDDropdownMenuElement {
  color: $display-white;
  font-size: 20px;
  padding: 12px 16px;
  display: block;
  border: 3px solid transparent;
  white-space: nowrap;
  overflow: hidden;
}

.MFDDropdownMenuElement:hover {
  border: 3px solid $display-cyan;
}

.MFDPageSelectorLabel {
  font-size: 22px;
  color: $display-white;
  font-family: "Ecam", monospace;
  padding: 2px;
  text-align: center;
  display: inline;
  margin: 10px;
  padding: 4px;
}

.MFDPageSelectorLabel.active {
  border: 1px solid $display-white;
}

.MFDPageSelectorOuter {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: $display-mfd-dark-grey;
  border-top: 2px solid $display-light-grey;
  border-left: 2px solid $display-light-grey;
  border-bottom: 2px solid rgba(211, 211, 211, 0.432);
  border-right: 2px solid rgba(211, 211, 211, 0.432);
}

.MFDPageSelectorOuter:hover {
  border-color: $display-cyan;
}

.MFDPageContainer {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
}

.spacingRight {
  margin-right: 15px;
}

.leadingUnit {
  margin-right: 6px;
}

.trailingUnit {
  margin-left: 6px;
}

.MFDTextInput {
  display: flex;
  flex-direction: row;
  justify-items: center;
  align-items: baseline;
  padding: 4px;
  border: 2px inset $display-light-grey;
  text-align: center;
  vertical-align: center;
}

.MFDTopTabNavigatorContainer {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
  margin: 2px;
}

.MFDNavigatorContainer {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.MFDNavigatorContent {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.MFDTopTabNavigatorBar {
  display: flex;
}

.MFDTopTabNavigatorBarElementOuter {
  display: flex;
  flex: 1;
  border-bottom: 2px solid $display-light-grey;
}

.MFDTopTabNavigatorBarElementLabel {
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
  background-color: $display-mfd-dark-grey;
  border-top: 2px solid $display-light-grey;
  padding: 6px 0px 2px 0px;
}

.MFDTopTabNavigatorBarElementLabel.active {
  background-color: $display-background;
}

.MFDTopTabNavigatorBarElementLabel:hover {
  border: 2px outset $display-cyan;
}

.MFDTopTabNavigatorBarElementOuter.active {
  background-color: $display-background;
  border-bottom-style: none;
}

.MFDTopTabNavigatorTabContent {
  flex: 1;
  display: flex;
  flex-direction: column;
  border: 2px outset $display-light-grey;
  border-top-style: none;
  padding: 10px;
  overflow: hidden;
}

.MFDLabelValueContainer {
  padding: 7px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.MFDRadioButton{
  -webkit-appearance: none; /* WebKit */
  -moz-appearance: none; /* Mozilla */
  -o-appearance: none; /* Opera */
  -ms-appearance: none; /* Internet Explorer */
  appearance: none; /* CSS3 */
  font-size: 26px;
  display: flex;
  align-items: center;
  border: 2px solid transparent;
}

.MFDRadioButton + .MFDRadioButton {
  margin-top: 5px;
}

.MFDRadioButton input[type="radio"] {
  appearance: none; /* CSS3 */
  background-color: $display-background;
  width: 30px;
  height: 30px;
  border: 2px inset lightgray;
  border-radius: 50%;
  margin-right: 15px;
  display: grid;
  place-content: center;
}

.MFDRadioButton input[type="radio"]::after {
  display: none;
}


.MFDRadioButton input[type="radio"]:checked {
  background: $display-cyan;
  box-shadow: inset 0 0 0px 4px black;
}


.MFDRadioButton input[type="radio"]:checked {
  background: $display-cyan;
  box-shadow: inset 0 0 0px 4px black;
}

.MFDRadioButton input[type="radio"]:checked ~ * {
  color: $display-cyan;
}

.MFDRadioButton:hover {
  border: 2px outset $display-cyan;
}

.MFDContextMenu {
  background-color: $display-mfd-dark-grey;
  border: 2px outset $display-light-grey;
  position: absolute;
  z-index: 10;
  overflow: auto;
  display: none;
}

.MFDContextMenuElement {
  color: $display-white;
  font-size: 22px;
  text-align: left;
  padding: 7px 2px;
  display: block;
  border: 3px solid transparent;
}

.MFDContextMenuElement:hover {
  border: 3px solid $display-cyan;
}

.MFDContextMenuElement.disabled {
  color: $display-dark-grey;
}

.MFDContextMenuElement.disabled:hover {
  border: 3px solid transparent;
}

.MFDNumberInputContainer {
  display: flex;
  flex-direction: row;
  justify-items: center;
  align-items: baseline;
  padding: 4px 2px;
  background-color: $display-background;
  border: 2px inset $display-light-grey;
  overflow: hidden;
  height: 37px;
}

.MFDNumberInputContainer.disabled {
  background-color: $display-mfd-dark-grey;
}

.MFDNumberInputContainer:hover {
  border: 2px inset $display-cyan;
}

.MFDNumberInputTextInput {
  background-color: $display-background;
  border: none;
  font-family: "Ecam", monospace;
  font-size: 25px;
  color: $display-cyan;
  padding: 0px;
}

.MFDNumberInputTextInput.validating {
  color: $display-light-grey;
}

.MFDNumberInputTextInput.disabled {
  background-color: $display-mfd-dark-grey;
  color: $display-light-grey;
}

.MFDNumberInputTextInput.mandatory {
  color: $display-amber;
}

.MFDNumberInputTextInput.valueSelected {
  background-color: $display-cyan;
  color: $display-background;
}

.MFDNumberInputTextInput.editing {
  font-size: 25px !important;
}

.MFDNumberInputTextInput.computedByFms {
  font-size: 21px;
}

.MFDInputFieldCaret {
  animation: blinking 1s step-start infinite;
  height: 24px;
  width: 15px;
  background-color: $display-cyan;
  color: $display-background;
  font-family: "Ecam", monospace;
  font-size: 25px;
  text-align: center;
  vertical-align: center;
}

@keyframes blinking {
  50% {
    background-color: $display-background;
    color: $display-cyan;
  }
}

.MFDMouseCursor {
  pointer-events: none;
  width: 80px;
  height: 80px;
  position: absolute;
  z-index: 999;
}

.MFDDialog {
  z-index: 10;
  overflow: auto;
  position: absolute;
  background-color: #040404;
  border: 2px outset lightgray;
  padding: 5px;
  margin: 5px;
}

.MFDFplnLine {
  color: $display-white;
  font-family: "Ecam", monospace;
  height: 72px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.MFDFplnLineSecondary > div > .MFDFplnLineAnnotation,
.MFDFplnLineSecondary > div > .MFDFplnLineIdent,
.MFDFplnLineSecondary > .MFDFplnSmallLabel,
.MFDFplnLineSecondary > .MFDFplnClickableSmallLabel {
  color: $display-white;
}

.MFDFplnLineTemporary > div > .MFDFplnLineAnnotation,
.MFDFplnLineTemporary > div > .MFDFplnLineIdent,
.MFDFplnLineTemporary > .MFDFplnSmallLabel,
.MFDFplnLineTemporary > .MFDFplnClickableSmallLabel,
.MFDFplnLineTemporary > div > .MFDFplnActiveLeg {
  color: $display-yellow;
}

.MFDFplnSpecialLine {
  justify-content: center;
  border: 2px solid transparent;
}

.MFDFplnSpecialLine:hover {
  border: 2px solid $display-cyan;
}

.MFDFplnLineAnnotation {
  height: 32px;
  text-align: right;
  font-size: 22px;
  color: $display-white;
}

.MFDFplnLineIdent {
  height: 40px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 30px;
  color: $display-green;
  border: 2px solid transparent;
}

.MFDFplnLineIdent:hover {
  border: 2px solid $display-cyan;
}

.MFDFplnLineIdent.selected {
  background-color: $display-dark-grey;
  color: $display-white;
}

.MFDFplnSmallLabel {
  height: 72px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 22px;
  color: $display-green;
}

.MFDFplnClickableSmallLabel {
  height: 72px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 22px;
  color: $display-green;
  border: 2px solid transparent;
}

.MFDFplnClickableSmallLabel:hover {
  border: 2px solid $display-cyan;
}

.MFDFplnLegUpperRow {
  height: 32px;
}

.MFDFplnLegLowerRow {
  height: 40px;
}

.MFDFplnActiveLeg {
  color: $display-white;
}

.MFDFplnConstraintRespected {
  width: 20px;
  text-align: center;
  font-size: 30px;
  color: $display-magenta;
}

.MFDFplnConstraintMissed {
  width: 20px;
  text-align: center;
  font-size: 30px;
  color: $display-amber;
}

